kind/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: vault
  name: vault-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /vault(/|$)(.*)
            backend:
              service:
                name: vault-ui
                port:
                  number: 8200
---
